# uni_projects_6-Cplusplus-

./: README.md
Tic_tac_toe_withAI/: Description_tictactoe
Tic_tac_toe_withAI/code/: tic_tac_toe_game.cpp
smartselfie/: description_smartselfie
smartselfie/code/: CMakeCache.txt  CMakeLists.txt  Makefile  SmartSelfie.ilk  cmake_install.cmake  main.cpp
